# napari-medh5

./: .gitignore  CLAUDE.md  LICENSE  MEDH5_UPSTREAM_REPORT.md  README.md  pyproject.toml
src/napari_medh5/: __init__.py  _bbox.py  _handles.py  _layers.py  _reader.py  _types.py  _widget.py  _writer.py  napari.yaml
tests/: conftest.py  test_bbox_edges.py  test_bbox_roundtrip.py  test_integration_napari.py  test_layer_mapping.py  test_layers_edges.py  test_reader.py  test_widget.py  test_widget_edges.py  test_writer.py  test_writer_edges.py
